# py-bikeshed

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
src/gomma/rpctools/: exc_tools.py
src/shed/rpctools/: exc_tools.py  rpcwrap.py
tests/: test_foo.py  test_rpcwrap.py
tests/rpctools/: test_exc_tools.py  test_rpcwrap.py
