[tool.poetry]
name = "shed"
version = "0.0.1"
description = "A collection of packages used at the Mainframe"
authors = ["Kristján Valur Jónsson <fkristjan@themainframe.com>"]
repository = "https://github.com/kristjanvalur/py-shed"
documentation = "https://kristjanvalur.github.io/py-shed/"
readme = "README.md"
packages = [
  {include = "shed"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

